# Samurai-Backend

./: .dockerignore  .gitignore  .pdm-python  .pre-commit-config.yaml  Dockerfile  README.md  SECURITY.md  backend.dockerfile  beat.dockerfile  docker-compose-built.yml  docker-compose-dev.yml  docker-compose.debug.yml  docker-compose.yml  example.env  example.nginx.conf  launch_dev.sh  launch_lint.sh  launch_prod.sh  lint-requirements.txt  pyproject.toml  requirements.txt  ruff.toml  run_deployment.ps1  run_formatting.ps1  run_formatting.sh  run_lint.sh  run_lint_local.ps1  security.env.md  settings.env.md  start_services.sh  worker.dockerfile
.github/workflows/: code_review.yml  docker.yml  lint.yml  main.yml  main.yml.old  name_lint.yml  release.yml
DiplomaPulse/: manage.py
DiplomaPulse/DiplomaPulse/: asgi.py  celery.py  dev_settings.py  logger.py  settings.py  urls.py  views.py  wsgi.py
DiplomaPulse/accounts/: apps.py  enums.py  urls.py
DiplomaPulse/accounts/admin/: __init__.py
DiplomaPulse/accounts/managers/: __init__.py  base_user.py
DiplomaPulse/accounts/migrations/: 0001_initial.py  0001_squashed_0003_baseuser_content_type.py  0002_baseuser_registration_code_alter_baseuser_email.py  0003_baseuser_content_type.py  0004_alter_baseuser_options_alter_overseer_options_and_more.py  0005_alter_faculty_options_alter_group_options_and_more.py  0006_alter_baseuser_created_at_alter_baseuser_updated_at_and_more.py
DiplomaPulse/accounts/models/: __init__.py  base.py  base_user.py  faculty.py  group.py  overseer.py  student.py  teacher.py
DiplomaPulse/accounts/views/: __init__.py
DiplomaPulse/administration/: apps.py
DiplomaPulse/administration/admin/: __init__.py  project.py  project_task.py
DiplomaPulse/administration/migrations/: 0001_initial.py  0002_alter_project_created_at_alter_project_description_and_more.py
DiplomaPulse/administration/models/: __init__.py  _base.py  project.py  project_task.py
DiplomaPulse/communication/: apps.py  urls.py
DiplomaPulse/communication/migrations/: 0001_initial.py  0002_alter_chat_messages.py  0003_alter_chat_options_alter_message_options.py  0004_rename_fields.py
DiplomaPulse/communication/models/: __init__.py  _base.py  chat.py  message.py
DiplomaPulse/communication/utils/: __init__.py  randomizer.py
DiplomaPulse/communication/views/: base.py
DiplomaPulse/core/serializers/: fields.py  models.py
DiplomaPulse/students/: apps.py  choices.py  urls.py
DiplomaPulse/students/admin/: __init__.py  project.py  task.py
DiplomaPulse/students/migrations/: 0001_initial.py  0002_alter_comment_options_alter_userproject_options_and_more.py  0003_comment_file_name.py  0004_remove_comment_file_name_alter_comment_text.py
DiplomaPulse/students/models/: __init__.py  _base.py  comment.py  project.py  task.py
DiplomaPulse/students/serializers/: base.py
DiplomaPulse/students/views/: __init__.py  base.py
compose/: backend.sh  dev-docker-compose.yml  docker-docker-compose.yml  prod-docker-compose.yml
compose/otel/: docker-compose.yaml  readme.md
documentation/: creating_migrations.md
entrypoints/: backend.sh  beat.sh  celery.sh  web.sh
samurai/: manage.py
samurai/accounts/: choices.py
samurai/accounts/managers/: base_account.py
samurai/accounts/models/: base_account.py  student.py
samurai/core/models/: base.py
samurai/organization/admin/: __init__.py  faculty.py  group.py
samurai/organization/models/: faculty.py  group.py
samurai/samurai_backend/: asgi.py  celery.py  urls.py  wsgi.py
samurai/samurai_backend/settings/: settings.py
src/samurai_backend/: alembic.ini  app.py  db.py  dependencies.py  enums.py  error_handlers.py  errors.py  log.py  middleware.py  otel.py  settings.py  utils.py
src/samurai_backend/account/: operations.py  router.py
src/samurai_backend/admin/: router.py
src/samurai_backend/communication/: __init__.py  router.py
src/samurai_backend/core/: __init__.py  dependencies.py  endpoints.py  get.py  models.py  operations.py  router.py  schemas.py
src/samurai_backend/dependencies/: create_access_token.py  create_refresh_token.py  decode_refresh_token.py  get_current_account.py  get_current_active_account.py  oauth2_scheme.py  ws_get_current_active_account.py
src/samurai_backend/enums/: account_type.py  email_code_type.py  order_direction.py  permissions.py  task_state.py
src/samurai_backend/migrations/: README  env.py  script.py.mako
src/samurai_backend/models/: __init__.py  base.py  note.py
src/samurai_backend/organization/: dependencies.py
src/samurai_backend/schemas/: __init__.py  password.py
src/samurai_backend/scripts/: _base.py  change_password.py  create_admin.py  (+1 more)
useful/: file_to_base64.py
(+197 files in other folders)
