[project]
name = "Samurai-Backend"
version = "0.7.0"
description = "Backend part of the Samurai project"
authors = [
    {name = "Pavlo Pohorieltsev", email = "hdydpavel@gmail.com"},
]
dependencies = [
    "emmett>=2.5.9",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
develop = {cmd = "emmett develop", help="Run the development server"}